--- a/src/main/resources/templates/categoria/modifica.html
+++ b/src/main/resources/templates/categoria/modifica.html
@@ -6,10 +6,9 @@
 <head th:replace="~{general/fragmentos :: head}"/>
 <body>
     <header th:replace="~{general/fragmentos :: header}"/>
-    <section th:replace="~{categoria/fragmentos :: agregar}"/>
-    <section th:replace="~{categoria/fragmentos :: listado}"/>
+    <section th:replace="~{categoria/fragmentos :: editarCategoria}"/>
     <section th:replace="~{general/fragmentos :: mostrarToast}"/>
-    <section th:replace="~{categoria/fragmentos :: confirmarEliminar}"/>
+    <section th:replace="~{categoria/fragmentos :: editar}"/>
     <footer th:replace="~{general/fragmentos :: footer}"/>
 </body>
 </html>
