--- a/src/main/resources/templates/producto/modifica.html
+++ b/src/main/resources/templates/producto/modifica.html
@@ -6,9 +6,9 @@
 <head th:replace="~{general/fragmentos :: head}"/>
 <body>
     <header th:replace="~{general/fragmentos :: header}"/>
-    <section th:replace="~{producto/fragmentos :: editarCategoria}"/>
+    <section th:replace="~{producto/fragmentos :: editarProducto}"/>
     <section th:replace="~{general/fragmentos :: mostrarToast}"/>
-    <section th:replace="~{producto/fragmentos :: editar}"/>
+    
     <footer th:replace="~{general/fragmentos :: footer}"/>
 </body>
 </html>
