--- a/src/main/resources/templates/producto/listado.html
+++ b/src/main/resources/templates/producto/listado.html
@@ -2,17 +2,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head th:replace="~{general/fragmentos :: head}">
-    <title>TechShop</title>
-</head>
-<body>
-    <header th:replace="~{general/fragmentos :: header}"/>
-    <section th:replace="~{producto/fragmentos :: agregarProducto}"/>
-    <section th:replace="~{producto/fragmentos :: listadoProductos}"/>
-    <section th:replace="~{producto/fragmentos :: confirmarEliminar}"/>
-    <section th:replace="~{general/fragmentos :: mostrarToast}"/>
-    <footer th:replace="~{general/fragmentos :: footer}"/>
 
-    <footer th:replace="~{general/fragmentos :: footer}"/>
+<head th:replace="~{general/fragmentos :: head}"/>
+
+<body>
+    <header th:replace="~{general/fragmentos :: header}"></header>
+
+    <section th:replace="~{producto/fragmentos :: filtros}"></section>
+    <section th:replace="~{producto/fragmentos :: agregarProducto}"></section>
+    <section th:replace="~{producto/fragmentos :: listadoProductos}"></section>
+    <section th:replace="~{producto/fragmentos :: confirmarEliminar}"></section>
+    <section th:replace="~{general/fragmentos :: mostrarToast}"></section>
+
+    <footer th:replace="~{general/fragmentos :: footer}"></footer>
 </body>
 </html>
