--- a/src/main/resources/templates/producto/modifica.html
+++ b/src/main/resources/templates/producto/modifica.html
@@ -4,11 +4,13 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
 <head th:replace="~{general/fragmentos :: head}"/>
+
 <body>
-    <header th:replace="~{general/fragmentos :: header}"/>
-    <section th:replace="~{producto/fragmentos :: editarProducto}"/>
-    <section th:replace="~{general/fragmentos :: mostrarToast}"/>
-    
-    <footer th:replace="~{general/fragmentos :: footer}"/>
+    <header th:replace="~{general/fragmentos :: header}"></header>
+
+    <section th:replace="~{producto/fragmentos :: editarProducto}"></section>
+    <section th:replace="~{general/fragmentos :: mostrarToast}"></section>
+
+    <footer th:replace="~{general/fragmentos :: footer}"></footer>
 </body>
 </html>
